@@ -15,19 +15,17 @@
  */
 package net.javacrumbs.jsonunit.core.internal;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 class ArrayUtils {
     static List<Double> toDoubleList(double[] source) {
-        return Arrays.stream(source).boxed().collect(toList());
+        return Arrays.stream(source).boxed().toList();
     }
 
     static List<Integer> toIntList(int[] source) {
-        return Arrays.stream(source).boxed().collect(toList());
+        return Arrays.stream(source).boxed().toList();
     }
 
     // No streams for booleans
